# git_lecture

./: .gitignore  README.md  make_graph.py
exercises/: README.md  batch1.md  batch2.md  batch3.md  batch4.md  batch5.md
exercises/batch1/: pyproject.toml  test_game.py
exercises/batch1/src/tictactoe/: game.py
exercises/batch1/tests/: test_game.py
exercises/batch3/: .gitconfig  post-commit
exercises/batch5/: action_test.yml
resources/: instructions.md  readme.md
students/: rodolfocarobene.yml  template.yml
