[tool.poetry]
name = "tic-tac-toe"
version = "0.0.1"
description = "A simple Tic-Tac-Toe game module"
authors = ["Your Name <your@email.com>"]
packages = [{ include = "tictactoe", from = "src" }]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
